# blt-burn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md  SphereCodebase11_20_25.md  TODO.md  build.rs  cubecl.toml
benches/: entropy_benchmark.rs
docs/: API_REFERENCE.md  OPTIMIZATION_GUIDE.md  PRENORM_SIGNAL_SUMMARY.md  PRE_NORM_SIGNAL_EXTRACTION.md  README.md
gdpval_test/: item_0.hypergraph.db  item_1.hypergraph.db  item_2.hypergraph.db  item_3.hypergraph.db  item_4.hypergraph.db
ingest_output_dataset/: 83d10b06-26d1-4636-a32c-23f92c57f30b.hypergraph.db
ingest_output_dataset/.cache/openai_gdpval/: hf:__datasets_openai_gdpval@main_reference_files_b4b6f98cfda65510720c346302e148f4_Population (4).xlsx.path  reference_files_b4b6f98cfda65510720c346302e148f4_Population (4).xlsx.path
scripts/: check_gdpval_format.py  coherence_navigator.py  demo_prenorm_signal.py  inspect_sphere_result.py  install_ffmpeg.sh  quantum_navigator.py  run_full_pipeline_test.sh  setup_ffmpeg_env.sh  test_dataset_helpers.py  test_entropy_weighted.py  test_gdpval_dataset.py  test_orch_or.py  tune_entropy_threshold.py  upload_model.py  verify_mpk_weights.py  verify_weights_burn_native.py  water_filling_integration.py
src/: arrow_reader.rs  batching.rs  blt_core.rs  buffered_corpus.rs  corpus_db.rs  dataset.rs  ffmpeg.rs  generic_processor.rs  hf_resolver.rs  huggingface_loader.rs  lib.rs  main.rs  model.rs  model_loader.rs  patcher.rs  pipeline.rs  polars_dataset_loader.rs  prefetch.rs  pretokenize.rs  quantization.rs  reference_sources.rs  sidecar.rs  sphere_ebm.rs  tokenizer.rs  weights.rs
src/dataset_helpers/: mod.rs
src/fused_ops/: attention_kernel.rs  backend.rs  coherence_kernel.rs  hash_embedding_kernel.rs  kernel.rs  l2_norm_kernel.rs  mod.rs  rms_norm_kernel.rs  silu_gate_kernel.rs  softmax_kernel.rs
src/modalities/: audio.rs  binary.rs  code.rs  document.rs  image.rs  mod.rs  text.rs  video.rs
src/output/: mod.rs  webdataset.rs
src/polars_ext/: hash_ops.rs  mod.rs  spatial_ops.rs
test_output/: manual_input.hypergraph.db
test_output_video/: test_video.hypergraph.db
test_pipeline/: item_0.hypergraph.db
test_samples/: sample_code.rs  sample_text.txt  test_doc_consistency.py  test_ffmpeg_flow.sh  test_imports.py  test_multimodal_dataset.json  test_red_team.py  test_video_message.txt
tests/: test_blt_core.rs  test_fused_entropy.rs  test_fused_ops.rs
treevgr_output/: item_0.hypergraph.db
treevgr_test/: item_0.hypergraph.db
