[package]
name = "blt-burn"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-4.0"
authors = ["SashimiSaketoro <sashimisaketoro@protonmail.com>"]
repository = "https://github.com/SashimiSaketoro/blt-burn"
homepage = "https://github.com/SashimiSaketoro/blt-burn"
description = "Rust implementation of ByteLatent Transformer (BLT) entropy model with Burn framework"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", features = ["wgpu", "train", "sqlite"] }
burn-wgpu = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-cubecl = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-fusion = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-import = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-dataset = { git = "https://github.com/tracel-ai/burn", branch = "main", optional = true }
cubecl = { version = "0.9.0-pre.3", features = ["wgpu"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
safetensors = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.10"
rmp-serde = "1.3"
serde_bytes = "0.11"
rand = "0.8"
hf-hub = "0.3.2"
tiktoken-rs = "0.5.8"
sentencepiece = "0.11.3"
tokenizers = "0.20.3"
bytemuck = "1.24.0"
image = "0.24"
hound = "3.5"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
symphonia = "0.5"
pdfium-render = { version = "0.8", features = ["image"] }
uuid = { version = "1.10", features = ["v4"] }
goblin = "0.8"
# Video decoding with FFmpeg
ffmpeg-next = { version = "7.0", optional = true }
ffmpeg-sys-next = { version = "7.0", optional = true }
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
hypergraph = "2.2.0"
polars = { version = "0.40", features = ["lazy", "ipc", "json", "parquet"] }
base64 = "0.22"
blake3 = "1.5"
urlencoding = "2.1"
geo = "0.28"
flate2 = "1.0"
tar = "0.4"

[features]
default = ["fused-entropy"]
video = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]
burn-dataset-compat = ["dep:burn-dataset"]
fused-entropy = []

[build-dependencies]
anyhow = "1.0"
hf-hub = "0.3.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "entropy_benchmark"
harness = false
