[package]
name = "blt-burn"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-4.0"
authors = ["SashimiSaketoro <sashimisaketoro@protonmail.com>"]
repository = "https://github.com/SashimiSaketoro/blt-burn"
homepage = "https://github.com/SashimiSaketoro/blt-burn"
description = "Rust implementation of ByteLatent Transformer (BLT) entropy model with Burn framework"

[dependencies]
# =============================================================================
# Burn 0.19.1 - stable release from crates.io
# =============================================================================
# Core burn framework with features:
#   - wgpu: GPU acceleration via WebGPU
#   - train: Training utilities including dataset support
#   - sqlite-bundled: Dataset storage in SQLite (bundled SQLite)
#   - store: Model storage with SafeTensors format
#   - fusion: Kernel fusion optimization
#   - autodiff: Automatic differentiation for backpropagation
#   - autotune: Automatic kernel selection
burn = { version = "0.19.1", features = [
    "wgpu",
    "train",
    "sqlite-bundled",
    "store",
    "fusion",
    "autodiff",
    "autotune"
] }

# Burn sub-crates for advanced features
burn-wgpu = "0.19.1"                    # WGPU backend types (Wgpu, WgpuDevice)
burn-cubecl = { version = "0.19.1", optional = true }  # CubeCL backend for custom kernels
burn-fusion = { version = "0.19.1", optional = true }  # Fusion backend wrapper
burn-import = "0.19.1"                  # Model import (SafeTensors, ONNX)

# CubeCL for custom GPU kernels (matches burn-cubecl 0.19.1)
cubecl = { version = "0.8", features = ["wgpu"], optional = true }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
safetensors = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.10"
rmp-serde = "1.3"
serde_bytes = "0.11"
rand = "0.8"
hf-hub = "0.3.2"
tiktoken-rs = "0.5.8"
sentencepiece = "0.11.3"
tokenizers = "0.20.3"
bytemuck = "1.24.0"
image = "0.24"
hound = "3.5"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
symphonia = "0.5"
pdfium-render = { version = "0.8", features = ["image"] }
uuid = { version = "1.10", features = ["v4"] }
goblin = "0.8"
# Video decoding with FFmpeg (v8.0 supports FFmpeg 3.4 - 8.0)
ffmpeg-next = { version = "8.0", optional = true }
ffmpeg-sys-next = { version = "8.0", optional = true }
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
hypergraph = "2.2.0"
polars = { version = "0.46", features = ["lazy", "ipc", "json", "parquet", "dtype-struct"] }
dirs = "5.0"
base64 = "0.22"
blake3 = "1.5"
urlencoding = "2.1"
geo = "0.28"
flate2 = "1.0"
tar = "0.4"

# Sphere optimization
ndarray = "0.16"
ndarray-npy = "0.9"
fastrand = "2.0"
rayon = "1.10"

# THRML-rs for EBM-based sphere optimization (optional)
# Uses local path since thrml-rs is checked out as a submodule
thrml-core = { path = "../thrml-rs/crates/thrml-core", optional = true }
thrml-samplers = { path = "../thrml-rs/crates/thrml-samplers", optional = true }
thrml-models = { path = "../thrml-rs/crates/thrml-models", optional = true }
thrml-sphere = { path = "../thrml-rs/crates/thrml-sphere", optional = true }

[features]
default = ["fused-entropy"]
video = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]
fused-entropy = ["dep:cubecl", "dep:burn-cubecl", "dep:burn-fusion"]
sphere = []
thrml = ["dep:thrml-core", "dep:thrml-samplers", "dep:thrml-models", "dep:thrml-sphere"]

[build-dependencies]
anyhow = "1.0"
hf-hub = "0.3.2"
built = { version = "0.7", features = ["git2"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "entropy_benchmark"
harness = false
